# Biquadris

./: .gitignore  CMakeLists.txt  README.md
include/: action.h  blockDispenser_J.h  blockDispenser_L.h  blockDispenser_S.h  blockDispenser_tiny.h  block_I.h  block_L.h  block_S.h  block_tiny.h  graphicdisplay.h  grid.h  heavy.h  level.h  level_0.h  level_3.h  level_4.h  sequence.h  subject.h  subscription.h  tetrisDecorator.h  textdisplay.h  window.h
sample_arg/: commandlist.txt  compare.txt  sequence1.txt
src/: CMakeLists.txt  Color.h  Makefile  action.cc  block.cc  block.h  blockDispenser.cc  blockDispenser.h  blockDispenser_I.cc  blockDispenser_I.h  blockDispenser_J.cc  blockDispenser_L.cc  blockDispenser_O.cc  blockDispenser_O.h  blockDispenser_S.cc  blockDispenser_T.cc  blockDispenser_T.h  blockDispenser_Z.cc  blockDispenser_Z.h  blockDispenser_tiny.cc  blockShape.cc  blockShape.h  block_I.cc  block_J.cc  block_J.h  block_L.cc  block_O.cc  block_O.h  block_S.cc  block_T.cc  block_T.h  block_Z.cc  block_Z.h  block_tiny.cc  cmdlist.txt  command_interpreter.cc  command_interpreter.h  commandlist.txt  graphicdisplay.cc  grid.cc  (+27 more)
